feat: add working ChatApp and fun with pattern matching xx